syntax = "proto3";

package kvraftpb;

enum OpType {
    Unknown = 0;
    Put = 1;
    Append = 2;
}

/// Put or Append
message PutAppendRequest {
    string key = 1;
    string value = 2;
    // "Put" or "Append"
    OpType op = 3;
    string name = 4;
    uint64 reqno = 5;
}

message PutAppendReply {
    bool wrong_leader = 1;
    string err = 2;
}

message GetRequest {
    string key = 1;
    string name = 2;
    uint64 reqno = 3;
}

message GetReply {
    bool wrong_leader = 1;
    string err = 2;
    string value = 3;
}

message Op {
    string key = 1;
    string value = 2;
    string op_type = 3;
    string name = 4;
    uint64 reqno = 5;
}

message OpReply {
    bool wrong_leader = 1;
    string err = 3;
    string value = 4;
}

message KvServerNonVolatileState {
    map<string, string> kv_store = 1;
    map<string, uint64> max_reqno_map = 2;
}

